# HM_IDENT_3DFR

./: .dockerignore  .env_docker  .env_local  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt
configs/: config_exp100.yaml  config_exp101_1.yaml  config_exp104_3.yaml  config_exp105_1.yaml  config_exp105_2.yaml  config_exp107_1.yaml  config_exp107_2.yaml  config_exp107_3.yaml  config_exp109_1.yaml  config_exp109_2.yaml  config_exp109_3.yaml  config_exp110_1.yaml  config_exp110_2.yaml  config_exp110_3.yaml  config_exp111_1.yaml  config_exp111_2.yaml  config_exp111_3.yaml  config_exp112_1.yaml  config_exp112_2.yaml  config_exp112_3.yaml  config_exp113_1.yaml  config_exp113_2.yaml  config_exp113_3.yaml  config_exp114_1.yaml  config_exp114_2.yaml  config_exp114_3.yaml  config_exp115_1.yaml  config_exp115_2.yaml  config_exp115_3.yaml  config_exp116_1.yaml  config_exp116_2.yaml  config_exp116_3.yaml  config_exp117_1.yaml  config_exp117_2.yaml  config_exp117_3.yaml  config_exp118_1.yaml  config_exp118_2.yaml  config_exp118_3.yaml  config_exp119_1.yaml  config_exp119_2.yaml  (+495 more)
configs/old/: config_exp101_2.yaml  config_exp101_3.yaml  config_exp102_1.yaml  config_exp102_2.yaml  config_exp102_3.yaml  (+346 more)
src/: .env  .gitignore  README.md  config.py  config.yaml  config_exp27_2.yaml  config_exp28_1.yaml  config_exp30_2.yaml  config_exp30_3.yaml  config_exp37_1.yaml  config_exp37_3.yaml  config_exp39_2.yaml  config_exp39_3.yaml  config_exp40_3.yaml  config_exp41_1.yaml  config_exp41_2.yaml  config_exp41_3.yaml  config_exp42_1.yaml  config_exp43_1.yaml  config_exp43_2.yaml  config_exp43_3.yaml  config_exp44_1.yaml  config_exp44_2.yaml  config_exp44_3.yaml  config_exp45_1.yaml  config_exp45_2.yaml  config_exp45_3.yaml  config_exp46_1.yaml  config_exp46_2.yaml  config_exp46_3.yaml  config_exp47_1.yaml  config_exp47_2.yaml  config_exp47_3.yaml  config_exp48_1.yaml  config_exp48_2.yaml  config_exp48_3.yaml  config_exp49.yaml  config_exp52_1.yaml  config_exp53_1.yaml  eval.py  (+16 more)
(+201 files in other folders)
